Favicon et partenaires
Mise à jur des partenaires, de quelque liens FB, ajout d'un Favicon (en haut à coté de l'URL pour les Nuls ;) ).

--- a/css/agency.css
+++ b/css/agency.css
@@ -434,7 +434,8 @@ section {
     margin-top: 0; }
 
 aside.clients img {
-  margin: 50px auto; }
+  margin: 50px auto;
+  height: 150px; }
 
 section#contact {
   background-color: #222222;
